<resources>
    <string name="app_name">MyFootballClubApi</string>
    <string name="match">Past Match</string>
    <string name="next_match">Next Match</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vs">vs</string>
    <string name="shots">Shots</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defender">Defender</string>
    <string name="midfielders">Midfielders</string>
    <string name="forwards">Forwards</string>
    <string name="substitution">Substitution</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="red_cards">Red Cards</string>
    <string name="goal_scorer">Goal Scorer</string>
    <string name="favorite">Favorite Match</string>
</resources>
